<resources>
    <string name="app_name">社区服务人员</string>
    <string name="label_personal_no_login">马上登录</string>
    <string name="label_about_us">关于我们</string>
    <string name="switch_account_number">注销账号</string>
    <string name="msg_error_network">网络连接失败</string>
    <string name="msg_error_nodata">没有查找到，搜索的数据</string>
    <string name="msg_error_del">删除失败，请重试</string>
    <string name="msg_success_bill">提现成功</string>
    <string name="common_not_more">没有更多</string>
    <string name="msg_error">查询失败，请重试</string>
    <string name="msg_error_send">发送失败，请重试</string>
    <string name="msg_error_update">更新失败，请重试</string>
    <string name="msg_error_save">保存失败，请重试</string>
    <string name="old_rder">历史订单</string>
    <string name="title_order">我的订单</string>
    <string name="title_profile">个人中心</string>
    <string name="order">订单</string>
    <string name="statistics">统计</string>
    <string name="holiday">请假</string>
    <string name="holiday_record">请假记录</string>
    <string name="hint_mobile"> 请输入手机号码</string>
    <string name="new_hint_mobile"> 请输入新手机号码</string>
    <string name="old_hint_mobile"> 请输入原手机号码</string>
    <string name="hint_password">请输入密码</string>
    <string name="input_new_password">请输入新密码</string>
    <string name="label_forget_password">忘记密码？</string>
    <string name="label_phone_login">手机快捷登录</string>
    <string name="title_schedule_eidt">日程编辑</string>
    <string name="login">登录</string>
    <string name="title_phone_login">快捷登录</string>
    <string name="title_pwd_login">密码登录</string>
    <string name="label_legal_mobile">请输入合法的手机号码</string>
    <string name="label_six_twenty_identify">请输入6-20位密码</string>
    <string name="msg_loading_login">正在登录\u2026</string>
    <string name="label_loging_success">登录成功</string>
    <string name="msg_success_save">保存成功</string>
    <string name="label_login_fail">登录失败，请稍后重试</string>
    <string name="msg_loading">正在加载中\u2026</string>
    <string name="label_identifying_code">请输入验证码</string>
    <string name="lable_get_identifying">获取验证码</string>
    <string name="check_mobile">校验</string>
    <string name="sure_edit">确认修改</string>
    <string name="input_code">请输入验证码</string>
    <string name="now_phone">当前手机号码:%1$s</string>
    <string name="code_again">重新发送(%1$s)</string>
    <string name="lable_no_get_identifying">未收到验证码，请联系客服？</string>
    <string name="label_empty_mobile">手机号码不能为空</string>
    <string name="label_empty_password">密码不能为空</string>
    <string name="label_empty_repassword">确认密码不能为空</string>
    <string name="label_send_success">发送成功</string>
    <string name="label_empty_identify">验证码不能为空</string>
    <string name="label_six_identify">请输入6位验证码</string>
    <string name="label_changedpassword_success">修改密码成功</string>
    <string name="hint_password_new_ok">请确认密码</string>
    <string name="change">修改</string>
    <string name="label_change_fail">修改密码失败，请稍后重试</string>
    <string name="label_change_password">密码修改</string>
    <string name="login_head">易赞O2O</string>
    <string name="label_business">服务人员版</string>
    <string name="label_phone_login_head">验证手机，马上进入易赞O2O</string>
    <string name="about_us">关于我们</string>
    <string name="hint_edt_feed_back">请输入您的宝贵意见和建议，我们会努力为您做的更好...</string>
    <string name="message">消息通知</string>
    <string name="tell_pro">您也可以拨打我们的客服热线，</string>
    <string name="check_ver">检查版本</string>
    <string name="upgrade">版本升级</string>
    <string name="upgrade_ignore">忽略更新</string>
    <string name="msg_error_last_version">当前已是最新版</string>
    <string name="upgrade_now">马上升级</string>
    <string name="change_user">切换账号</string>
    <string name="user_center">我的</string>
    <string name="inform_center_list">消息列表</string>
    <string name="label_load_fail">加载失败，请稍后重试</string>
    <string name="label_update_fail">更新失败，请稍后重试</string>
    <string name="label_minformation">我的消息</string>
    <string name="evluation_good">好评</string>
    <string name="evluation_nes">中评</string>
    <string name="evluation_bad">差评</string>
    <string name="my_commission">我的佣金</string>
    <string name="business_statistics">业务统计</string>
    <string name="ask_for_leave">请假</string>
    <string name="message_notification">消息通知</string>
    <string name="useing_help">使用帮组</string>
    <string name="income_detail">收支明细</string>
    <string name="setting">设置</string>
    <string name="setting_new_version">检查新版本</string>
    <string name="setting_new_mobile">改绑手机</string>
    <string name="new_mobile_check">校验手机号码</string>
    <string name="label_new_mobile">更改手机号后，需要使用新手机号登录。当前手机号：%1$s</string>
    <string name="setting_order_accept_auto">是否接单</string>
    <string name="setting_about_us">关于我们</string>
    <string name="server_clock">服务时间</string>
    <string name="server_scope">服务范围设置</string>
    <string name="suggestions">投诉与建议</string>
    <string name="customer_reviews">顾客评价</string>
    <string name="more_logout">退出登录</string>
    <string name="label_portrait">头像</string>
    <string name="nickname">昵称</string>
    <string name="msg_error_nickname">昵称格式不正确</string>
    <string name="label_getusername">请填写用户名</string>
    <string name="appointment_arg">预约到达时间：%1$s</string>
    <string name="duration_arg">时长：%1$s</string>
    <string name="order_sn">订单编号：%1$s</string>
    <string name="order_sn_2">订单编号：</string>
    <string name="remark_arg">备注：%1$s</string>
    <string name="contact_with_customers">联系顾客</string>
    <string name="navigation_path">导航</string>
    <string name="detail_customer_name">顾客名称：</string>
    <string name="order_detail">订单详情</string>
    <string name="no_pay_status">未支付</string>
    <string name="pay_status">已支付</string>
    <string name="detail_servicer_title">服务：</string>
    <string name="detail_valuation_method">计价方式：</string>
    <string name="detail_business_hours">服务时间：</string>
    <string name="detail_business_hours_length">服务时长：</string>
    <string name="detail_order_confirmation">订单确认</string>
    <string name="detail_service_content">服务内容</string>
    <string name="detail_number_of_services">服务数量：</string>
    <string name="detail_contact_person">联&#160;&#160;系&#160;&#160;人：</string>
    <string name="detail_contact_telephone_number">联系电话：</string>
    <string name="detail_address_of_service">服务地址：</string>
    <string name="detail_pick_time">取件时间：</string>
    <string name="detail_consumables">消&#160;&#160;耗&#160;&#160;品：</string>
    <string name="detail_cleaning">清洁用品：</string>
    <string name="detail_play_phone">拨打</string>
    <string name="detail_navigation">导航</string>
    <string name="detail_reply">回复</string>
    <string name="detail_order_code">订单编号：</string>
    <string name="detail_evaluatione">顾客评价</string>
    <string name="detail_unit_price">服务价格：</string>
    <string name="detail_notation">备&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;注：</string>
    <string name="detail_total">合&#160;&#160;&#160;&#160;&#160;&#160;&#160;计：</string>
    <string name="detail_prices">费&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;用：</string>
    <string name="detail_start_service">开始服务</string>
    <string name="detail_finsh_service">服务完成</string>
    <string name="detail_keeping_service">服务进行中...</string>
    <string name="detail_call_name">称呼：</string>
    <string name="detail_contact_method">联系方式：</string>
    <string name="detail_pay_way">支付方式：%1$s</string>
    <string name="detail_my_reply">我的回复：</string>
    <string name="detail_bg_reply">后台回复：</string>
    <string name="detail_cancel_reason">取消原因</string>
    <string name="cancel_order">拒绝订单</string>
    <string name="ok_order">接受订单</string>
    <string name="price_red_yuan"><![CDATA[<font color=\"red\">¥%1$s</font>]]>元</string>
    <string name="yuan">%1$s元</string>
    <string name="schedule">日程</string>
    <string name="schedule_edit">编辑</string>
    <string name="schedule_stop">停止接单</string>
    <string name="schedule_open">开启接单</string>
    <string name="selecte_all">&#160;&#160;全&#160;   &#160;选&#160;&#160;</string>
    <string name="selecte_clear">取消全选</string>
    <string name="label_selecte_idle_schedule">请先选择暂无安排日程</string>
    <string name="label_selecte_stop_schedule">请先选择停止接单日程</string>
    <string name="income_statistics">收入统计</string>
    <string name="statistics_month">按月份</string>
    <string name="statistics_month_summary">月份收入汇总</string>
    <string name="install_map_app">请先安装地图APP</string>
    <string name="err_map_info">获取地址信息失败</string>
    <string name="tip">提示</string>
    <string name="logout">注销</string>
    <string name="msg_tip_logout">确定退出当前账号？</string>
    <string name="msg_success_logout">退出登录成功</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="opinion_hint">请填写您的备注</string>
    <string name="opinion_comfimation">提交意见</string>
    <string name="commit">提交</string>
    <string name="opinion">意见反馈</string>
    <string name="version_detection">版本检测</string>
    <string name="opinion_edi_text">回复内容不能为空</string>
    <string name="opinion_finsh">反馈成功</string>
    <string name="opinion_error">反馈失败</string>
    <string name="evaluation">评价</string>
    <string name="confirm">确认</string>
    <string name="complete">完成</string>
    <string name="add_text">添加</string>
    <string name="batch_delete">批量删除</string>
    <string name="delete">删除</string>
    <string name="select_all">全选</string>
    <string name="select_other">反选</string>
    <string name="label_read">设为已读</string>
    <string name="msg_error_select">请至少选择一项</string>
    <string name="use_help">使用帮助</string>
    <string name="time_settings_txt">服务时间设置</string>
    <string name="time_list_txt">服务时间列表</string>
    <string name="time_leave_txt">请假</string>
    <string name="time_leave_history_txt">请假历史</string>
    <string name="time_leave_historylist">请假记录</string>
    <string name="time_leave_txt_start">开始请假时间</string>
    <string name="time_leave_txt_end">结束请假时间</string>
    <string name="time_leave_text">请假事由不能为空</string>
    <string name="time_leave_hint">请输入你的请假原因</string>
    <string name="zhi">至</string>
    <string name="permanent_settings_text">常驻地点设置</string>
    <string name="consumption_setting_text">服务商圈设置</string>
    <string name="hint_address_select">请选择地址</string>
    <string name="hint_address_detail_input">请输入详细地址</string>
    <string name="title_address_detail">详细地址：</string>
    <string name="save">保存</string>
    <string name="check_new_mobile">验证新手机</string>
    <string name="save_success">保存成功</string>
    <string name="sure">确定</string>
    <string name="text_area">请圈定服务范围</string>
    <string name="msg_error_location_device_not_support">定位失败，设备不支持</string>
    <string name="msg_error_location_select">位置选择错误，请重新选择</string>
    <string name="msg_error_location_save">保存常用地址失败</string>
    <string name="please_time_settings">请选择服务时间:</string>
    <string name="service_repetition">服务重复</string>
    <string name="monday">周一</string>
    <string name="tuesday">周二</string>
    <string name="wednesday">周三</string>
    <string name="thursday">周四</string>
    <string name="friday">周五</string>
    <string name="saturday">周六</string>
    <string name="sunday">周日</string>
    <string name="msg_nothing_text">无</string>
    <string name="msg_opening_bank">开户行:</string>
    <string name="msg_card_number">卡号:</string>
    <string name="msg_opening_bank_name">开户名:</string>
    <string name="msg_extract_money">可提现金额：</string>
    <string name="msg_yet_extract_money">提现金额：</string>
    <string name="msg_all_roll_out">全部转出</string>
    <string name="msg_go_to_extract">发起提现</string>
    <string name="msg_user_manage">账户信息</string>
    <string name="explain">说明</string>
    <string name="bank_add_notice">请绑定持卡人本人的银行卡</string>
    <string name="bank_add_send_identifying_code">验证码发送至您绑定的手机号</string>
    <string name="hint_bank_user_name">请输入持卡人姓名</string>
    <string name="hint_bank_name">请输入开户行全称</string>
    <string name="hint_bank_num">请输入开户行账号</string>
    <string name="hint_bank_identifying_code">请输入验证码</string>
</resources>