<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:orientation="vertical">

    <EditText
        android:id="@+id/edit_mobile_cp"
        style="@style/EditTextStyle"
        android:layout_marginTop="@dimen/margin_large"
        android:drawableLeft="@drawable/ic_mobile"
        android:drawablePadding="@dimen/margin_small"
        android:hint="@string/hint_mobile"
        android:inputType="phone"
        android:maxLength="11"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/text_now_phone"
        style="@style/TextViewStyle"
        android:text="@string/now_phone"
        android:textColor="@color/textGray"
        android:layout_marginTop="@dimen/margin_large"
        android:visibility="gone"/>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="@dimen/edittext_height"
        android:layout_marginTop="@dimen/margin">

        <EditText
            android:id="@+id/identify_code_et"
            style="@style/EditTextStyle"
            android:layout_width="0dp"
            android:layout_height="@dimen/edittext_height"
            android:layout_marginRight="@dimen/margin"
            android:layout_weight="1"
            android:hint="@string/label_identifying_code"
            android:inputType="number"
            android:maxLength="6"
            android:paddingLeft="@dimen/margin_small"
            android:singleLine="true" />

        <TextView
            android:id="@+id/get_identifying"
            android:layout_width="120dp"
            android:layout_height="fill_parent"
            android:layout_gravity="right"
            android:background="@drawable/corners_button_rich_selector"
            android:gravity="center"
            android:singleLine="true"
            android:text="@string/lable_get_identifying"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size" />
    </LinearLayout>

    <TextView
        android:id="@+id/contactcustomerservice_tv"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin"
        android:text="@string/lable_no_get_identifying"
        android:textColor="@color/textGray"
        android:textSize="@dimen/text_size_small"
        android:visibility="gone" />

    <EditText
        android:id="@+id/input_pwd_et"
        style="@style/EditTextStyle"
        android:layout_marginTop="@dimen/margin"
        android:drawableLeft="@drawable/ic_pwd"
        android:drawablePadding="@dimen/margin_small"
        android:hint="@string/input_new_password"
        android:inputType="textPassword"
        android:maxLength="20" />

    <Button
        android:id="@+id/changed_btn"
        style="@style/ButtonStyle"
        android:layout_marginTop="@dimen/margin_large_big"
        android:text="@string/ok" />
</LinearLayout>