<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.yizan.community.business.ui.BindCheckMobileActivity">

    <TextView
        android:id="@+id/bind_mobile"
        style="@style/TextViewStyle.Gray"
        android:singleLine="false"
        android:text="@string/label_new_mobile" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin">

        <EditText
            android:id="@+id/bind_code"
            style="@style/EditTextStyle"
            android:layout_weight="1"
            android:hint="@string/input_code"
            android:digits="1234567890"
            android:inputType="number"
            android:maxLength="6"/>

        <Button
            android:id="@+id/bind_code_btn"
            style="@style/ButtonStyle"
            android:layout_width="120dp"
            android:layout_marginLeft="@dimen/margin_mid"
            android:text="@string/lable_get_identifying" />
    </LinearLayout>

    <Button
        android:id="@+id/bind_validation_btn"
        style="@style/ButtonStyle"
        android:layout_marginTop="@dimen/margin"
        android:text="@string/check_mobile" />
</LinearLayout>
