<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/edit_mobile"
        style="@style/EditTextStyle"
        android:layout_marginTop="@dimen/margin_large"
        android:drawableLeft="@drawable/ic_mobile"
        android:drawablePadding="@dimen/margin_small"
        android:hint="@string/new_hint_mobile"
        android:inputType="phone"
        android:maxLength="11"
        android:layout_margin="@dimen/margin"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin"
        android:layout_marginRight="@dimen/margin">

        <EditText
            android:id="@+id/edit_code"
            style="@style/EditTextStyle"
            android:layout_weight="1"
            android:hint="@string/input_code"
            android:digits="1234567890"
            android:inputType="number"
            android:maxLength="6"/>

        <Button
            android:id="@+id/edit_code_btn"
            style="@style/ButtonStyle"
            android:layout_width="120dp"
            android:layout_marginLeft="@dimen/margin_mid"
            android:text="@string/lable_get_identifying" />
    </LinearLayout>

    <Button
        android:id="@+id/edit_validation_btn"
        style="@style/ButtonStyle"
        android:layout_marginTop="@dimen/margin"
        android:text="@string/sure_edit"
        android:layout_marginLeft="@dimen/margin"
        android:layout_marginRight="@dimen/margin"/>

</LinearLayout>
